[gd_scene load_steps=7 format=2]

[ext_resource path="res://Data/Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://addons/SmoothScroll/SmoothScrollContainer.gd" type="Script" id=2]
[ext_resource path="res://Data/Resources/game_theme.tres" type="Theme" id=3]

[sub_resource type="Animation" id=4]
resource_name = "Levels_Close"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath("Menu:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -76, -0.25, 0, 0.25, 0, 154, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Levels:rect_position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 128, -0.25, 0, 0.25, 0, 390, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("LevelsBackButton:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 30, -0.25, 0, 0.25, 0, -76, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=1]
resource_name = "Levels_Open"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath("Menu:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 154, -0.25, 0, 0.25, 0, -76, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Levels:rect_position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 390, -0.25, 0, 0.25, 0, 128, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("LevelsBackButton:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -76, -0.25, 0, 0.25, 0, 30, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Menu:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 30, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Menu:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 120, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("LevelsBackButton:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -280, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Levels:rect_position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 390, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Levels_Close = SubResource( 4 )
anims/Levels_Open = SubResource( 1 )
anims/RESET = SubResource( 3 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -38.0
margin_top = -82.0
margin_right = 38.0
margin_bottom = -30.0

[node name="PlayButton" type="Button" parent="Menu" groups=["Buttons"]]
margin_right = 76.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
focus_neighbour_top = NodePath("../QuitButton")
focus_mode = 0
text = "Play"

[node name="QuitButton" type="Button" parent="Menu" groups=["Buttons"]]
margin_top = 28.0
margin_right = 76.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 24 )
focus_neighbour_bottom = NodePath("../PlayButton")
focus_mode = 0
text = "Quit"

[node name="LevelsBackButton" type="Button" parent="." groups=["Buttons"]]
margin_left = -76.0
margin_top = 162.0
margin_right = -6.0
margin_bottom = 186.0
focus_mode = 0
text = "Back"

[node name="Levels" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 390.0
margin_top = 12.0
margin_right = 262.0
margin_bottom = -12.0
scroll_horizontal_enabled = false
script = ExtResource( 2 )
damping = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="Levels"]
margin_right = 256.0
size_flags_horizontal = 3

[connection signal="pressed" from="Menu/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="LevelsBackButton" to="." method="_on_LevelsBackButton_pressed"]
